# transit-reliability

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  README_INTERNAL.md  docker-compose.yml  ideas_during_code_cleanup.txt  main.py  next_promt  next_promt_old  pyproject.toml  todos_logic_review.txt
airflow/: Dockerfile.airflow  docker-compose.yaml  requirements.txt
airflow/dags/: gtfs_static_refresh.py  hello_pipeline.py  osm_refresh.py  transit_batch_pipeline.py  warehouse_cleanup.py
brainstorming/: README_INTERNAL.md
dbt/: .user.yml  profiles.yml  pyproject.toml
dbt/analytics/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/analytics/macros/: warehouse_compat.sql
dbt/analytics/models/marts/: mart_route_explanations.sql  mart_route_reliability.sql
dbt/analytics/models/staging/: sources.yml  stg_realtime_trip_updates.sql  stg_stop_times.sql  stg_stops.sql  stg_transfers.sql  stg_trips.sql
infra/terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
services/api/: Dockerfile  README.md  geocoding.py  main.py  pyproject.toml  response_formatter.py
services/flink/: Dockerfile.flink  README.md  job.py  job_impossible.py  pyproject.toml
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/gtfs/: __init__.py  load_gtfs.py  load_gtfs_bigquery.py
services/ingestion/realtime/: README.md  gtfs_realtime_consumer.py  gtfs_realtime_producer.py  gtfs_rt_producer.py
services/scoring/: README.md  itinerary_formatter.py  main.py  otp_client.py  pyproject.toml  realtime_lookup.py  reliability_lookup.py  route_parser.py  route_summary.py  scorer.py  test_db.py  test_otp.py  test_parser.py  test_scorer.py
services/ui/: app.py  pyproject.toml
tests/manual/: scoring_db_check.py  scoring_otp_check.py  scoring_parser_check.py  scoring_score_check.py
