[project]
name = "transit-reliability-flink"
version = "0.1.0"
description = "PyFlink stream job for realtime transit reliability features"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apache-flink==2.2.0",
    "gtfs-realtime-bindings>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "ruamel-yaml>=0.18.16",
    "typing-extensions>=4.15.0",
]

[tool.setuptools]
py-modules = ["job"]
