[project]
name = "transit-reliability-ingestion"
version = "0.1.0"
description = "GTFS static loading and GTFS-Realtime Kafka producer jobs"
requires-python = ">=3.11"
dependencies = [
    "gtfs-realtime-bindings>=2.0.0",
    "kafka-python>=2.3.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
]
